班級空間 蘋果無法實現點贊功能

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -24,12 +24,12 @@
 					
 					</div>
 				</div>
-				<!--<div class="more-navigation">
+				<div class="more-navigation">
 					<a class="iconfont icon-qita11">
 						<!--导航-->
-					<!--</a>
+					</a>
 					<p>导航</p>
-				</div>-->
+				</div>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
