七牛上传临时作业对接

--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -66,6 +66,7 @@
 		<script src="../../js/mui.previewimage.js "></script>
 		<script src="../../js/libs/CryptoJS/rollups/tripledes.js"></script>
 		<script src="../../js/libs/CryptoJS/components/mode-ecb-min.js"></script>
+		<script src="../../js/utils/compress.js"></script>
 		<script src="../../js/utils/CloudFileUtil.js"></script>
 		<script src="../../js/qiniu/qiniu.js"></script>
 		<script src="../../js/utils/events.js"></script>
