0004634: 查看了常规作业，然后查看临时作业，临时却显示常规作业的作业结果

--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -26,11 +26,10 @@
 		<script src="../../js/publicProtocol.js"></script>
 		<script>
 			/*预加载界面*/
-			//			mui.init();
+//			mui.init();
 			mui.plusReady(function() {
-				events.preload('class-dynamic.html', 100);
+				events.preload('class-dynamic.html');
 				events.preload('class-group.html');
-
 				var write = document.getElementById('write');
 				var data = plus.webview.currentWebview().data;
 				console.log('班级空间：' + JSON.stringify(data));
