--- a/JiaoBaoYun-hb/html/mine/about.html
+++ b/JiaoBaoYun-hb/html/mine/about.html
@@ -15,6 +15,9 @@
 			<h1 class="mui-title">关于</h1>
 		</header>
 		<div class="mui-content">
+			<!--<div style="text-align: center;padding-top: 10px;"><img src="../../image/mine/jiaobaoyun.png" style="width: 100px;height: 100px;"></img></div>
+			<p></p>-->
+			
 			<h4 style="text-align: center;">软件介绍</h4>
 			<p style="font-size: 14px;margin:10px ;">     教宝云为全新面貌升级，通过专业的技术服务团队，为学校及家长等提供家校互联产品及服务。此产品的主要功能有：
 老师通过点到与记事，针对每个孩子在校考勤情况与在校表现一对一记录，给每个孩子一个密切关注，云盘长久保存。提供云存储功能，图片、视频等任意传，长久保存孩子成长过程及文件等资料，安全可靠！提供应用模块，其中包含手机通讯录、手机图库、笔记等应用。
