昵称字数限制

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="mui-input-row" id="unickName0">
 					<label style="font-size: 15px;">昵称</label>
-					<input type="text" id="unickName" placeholder="请输入昵称">
+					<input type="text" oninput="if(value.length>20)value=value.slice(0,20)"  id="unickName" placeholder="请输入昵称，最多20字">
 				</div>
 			</form>
 			<div class="mui-content-padded">
@@ -70,16 +70,11 @@
 				var navTitle = document.getElementById('navTitle');
 				var back = document.getElementById('back');
 				var phoneNumber = document.getElementById("phoneNumber"); //原密码
-				phoneNumber.value = '';
 				var unickName = document.getElementById("unickName"); //昵称
-				unickName.value = '';
 				var unickName0 = document.getElementById("unickName0"); //昵称
-				unickName0.value = '';
-				var password0 = document.getElementById("password0"); //昵称
-				password0.value = '';
-				var password1 = document.getElementById("password1"); //昵称 
-				password1.value = '';
-				var modifypasswordBtn = document.getElementById("modifypassword"); //昵称
+				var password0 = document.getElementById("password0"); //新密码
+				var password1 = document.getElementById("password1"); //确认密码
+				var modifypasswordBtn = document.getElementById("modifypassword"); //修改密码按钮
 
 				//设置里面修改密码
 				window.addEventListener('changePasswords', function() {
@@ -91,6 +86,7 @@
 					tempFlag = 1;
 					navTitle.innerHTML = '修改密码';
 					modifypasswordBtn.innerHTML = '修改密码';
+					clearData();
 				});
 				//设置里面退出时设置密码
 				window.addEventListener('settingPW', function() {
@@ -102,6 +98,7 @@
 					document.getElementById('cancelBtn').style.display = 'none';
 					modifypasswordBtn.innerHTML = '设置密码';
 					console.log('333333');
+					clearData();
 				});
 				
 				//从验证码界面登录或者注册时
@@ -114,6 +111,7 @@
 					document.getElementById('cancelBtn').style.display = 'inline-block';
 					modifypasswordBtn.innerHTML = '完成';
 					console.log('22222');
+					clearData();
 				});
 				//上级传值如果是1，是修改密码
 				//				if(curPage.data&&curPage.data==1){
@@ -271,6 +269,14 @@
 					events.openNewWindowWithData('../index/index.html', '');
 				});
 			});
+			//将界面的数据显示清除
+			var clearData = function() {
+				phoneNumber.value = '';
+				unickName.value = '';
+				unickName0.value = '';
+				password0.value = '';
+				password1.value = '';
+			}
 		</script>
 	</body>
 
