--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -21,9 +21,9 @@
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
-				/*去掉横线*/
-		}
-		*/ .dynamic-personal-image {
+				/*去掉横线
+		}*/
+		 .dynamic-personal-image {
 			/*个人头像圆形*/
 			
 			border-radius: 50%;
@@ -381,8 +381,8 @@
 					mui.extend(li.workInfo, homeworkDetailModel)
 					li.className = 'mui-table-view-cell mui-media isCommented'
 					li.innerHTML = '<img  class="mui-media-object mui-pull-left dynamic-personal-image" src="' + headImg + '" />' +
-						'<div class="mui-media-body">' +
-						uploadArray[i].ugnick + '<div class="mui-media-body mui-pull-right" ' +
+						'<div class="mui-media-body">' +events.shortForString(uploadArray[i].ugnick, 12)
+						 + '<div class="mui-media-body mui-pull-right" ' +
 						'<p id="isCommented' + i + '" style="font-size: 13px;">' + IsCommented + '<span class="mui-icon mui-icon-forward"></span></p></div>' +
 						'</div>'
 
@@ -408,7 +408,7 @@
 
 					li.innerHTML = '<img  class="mui-media-object mui-pull-left dynamic-personal-image" src="' + headImg + '" />' +
 						'<div class="mui-media-body">' +
-						'<div style = "padding-top:10px">' + remainArray[i].ugnick + '<button id="alert' + i + '" style="float: right;width:50px;height:30px;padding:1px 0 0 1px;font-size:12px;margin-top:-7px;" onclick="alertStu(this)"' + disabled + '>' +
+						'<div style = "padding-top:10px">' +events.shortForString(remainArray[i].ugnick, 12)  + '<button id="alert' + i + '" style="float: right;width:50px;height:30px;padding:1px 0 0 1px;font-size:12px;margin-top:-7px;" onclick="alertStu(this)"' + disabled + '>' +
 						alert +
 						'</button>' + '</div>' +
 						'</div>';
