--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -292,7 +292,8 @@
 										tempInfo.usex = tepI0000.usex;
 										tempInfo.utxt = tepI0000.utxt;
 										//解析省市代码
-										if(tepI0000.uarea.length > 0) {
+										console.log('9999='+tepI0000.uarea);
+										if(tepI0000.uarea!=null) {
 											var tempArray = tepI0000.uarea.split('|');
 											if(tempArray.length > 0) {
 												var temp0 = tempArray[0].split(' ');
