--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -26,7 +26,7 @@
 			<div class="footer-center">
 				<input id='msg-content' type="text" class='input-text'></input>
 			</div>
-			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit">提交</button>
+			<button id='btn-reply' class="mui-btn  btn-commit">提交</button>
 		</footer>
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
