--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -158,7 +158,7 @@
 						mui.toast('发布成功')
 						askTitle.value = '';
 						askNote.value = '';
-
+						mui.back();
 					} else {
 						mui.toast(data.RspTxt);
 					}
