--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -22,13 +22,13 @@
 			<div class="input-content">
 				<textarea id="input-content" placeholder="这一刻的想法"></textarea>
 				<div id="take_pic" class="take_pic">
-					<a class="mui-icon iconfont icon-xiangji"></a>
+					<a class="mui-icon iconfont icon-xiangji1"></a>
 				</div>
 				<div id="take_camero" class="take_camero">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
 				<div id="get_gallery" class="get_gallery">
-					<a class="mui-icon iconfont icon-xiangce"></a>
+					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
 			</div>
 			
