--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -25,13 +25,13 @@
 				<textarea id="input-content" placeholder="请输入内容" value=""></textarea>
 				<!--一期暂时不插入图片-->
 				<div id="take_pic" class="take_pic">
-					<a class="mui-icon iconfont icon-xiangji"></a>
+					<a class="mui-icon iconfont icon-xiangji1"></a>
 				</div>
 				<div id="take_camero" class="take_camero">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
 				<div id="get_gallery" class="get_gallery">
-					<a class="mui-icon iconfont icon-xiangce"></a>
+					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
 			</div>
 		</div>
