求知提问屏蔽匿名

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -45,10 +45,10 @@
 					全部
 				</a>
 			</p>
-			<div class="mui-input-row mui-checkbox mui-left" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
+			<!--<div class="mui-input-row mui-checkbox mui-left" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
 				<label>匿名</label>
 				<input id="checkbox" name="checkbox" value="" type="checkbox">
-			</div>
+			</div>-->
 
 		</div>
 
