--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -300,9 +300,9 @@
 				 * 创建群后修改界面
 				 */
 				function changInfo(data) {
-					events.fireToPageWithData('qun_manage_sub.html', 'createQun', data);
-					events.fireToPageNone('/html/mine/qun_data.html', 'refreshView');
-					events.fireToPageNone('../cloud/cloud_home.html', 'infoChanged');
+					events.fireToPageNone('qun_manage_1.html', 'createQun', data);
+					//events.fireToPageNone('/html/mine/qun_data.html', 'refreshView');
+					events.fireToPageNone('../cloud/cloud_home.html', 'getGroupList');
 				}
 
 				/**
