--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -123,7 +123,7 @@
 	</head>
 
 	<body>
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper"style="visibility: hidden;">
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper" style="visibility: hidden;">
 			<div class="mui-scroll">
 				<!--存储-->
 				<div id="cloudstorage" class="cloud-item">
@@ -261,7 +261,7 @@
 					element.lastElementChild.firstElementChild.firstElementChild.style.height = sliderHeight / 2 + 'px';
 					element.lastElementChild.lastElementChild.firstElementChild.style.height = sliderHeight / 2 + 'px';
 				});
-				document.getElementById("refreshContainer").style.visibility='visible';
+				document.getElementById("refreshContainer").style.visibility = 'visible';
 				//---调整界面---end---
 
 				//-----------设置数据start---------------
@@ -293,6 +293,13 @@
 				window.addEventListener('cloudDataChange', function() {
 					//设置页面信息
 					changeCloudData();
+				});
+
+				window.addEventListener('getGroupList', function() {
+					//获取所有的群
+					datasource = [];
+					//获取班级
+					getGroupList();
 				});
 
 				//-----------设置数据end-----------------
