--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -125,12 +125,12 @@
 					}
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
-							events.openNewWindowWithData('/html/mine/qun_manage_main.html', {
+							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
 								type: '0' //0群管理,1人员资料
 							});
 							break;
 						case 1: //人员资料
-							events.openNewWindowWithData('/html/mine/qun_manage_main.html', {
+							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
 								type: '1' //0群管理,1人员资料
 							});
 							break;
