--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -693,14 +693,16 @@
 						ustuid: '', //关联ID,更新与家长关系必填,其他留空
 						urel: '', //关系,更新与家长关系必填,其他留空
 					};
+					var gid = data.gid;
 					var stuid = data.stuid;
 					postDataPro_PostReStu(comData, wd, function(data) {
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							mui.toast('修改学生姓名 ' + stuName + ' 成功');
 							console.log('修改学生姓名 ' + stuName + ' 成功');
-							events.fireToPageNone('qun_manage_data_sub.html', 'changeName', {
+							events.fireToPageNone('qun_manage_1.html', 'changeName', {
 								vtp: 'stu', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+								gid:gid,//群id
 								stuid: stuid, //资料ID,更新学生老师必填,关系留0
 								stuname: stuName, //资料名称
 							});
@@ -783,14 +785,16 @@
 						ustuid: '', //关联ID,更新与家长关系必填,其他留空
 						urel: '', //关系,更新与家长关系必填,其他留空
 					};
+					var gid = data.gid;
 					var stuid = data.stuid;
 					postDataPro_PostReStu(comData, wd, function(data) {
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							mui.toast('修改老师资料成功');
 							console.log('修改老师资料成功');
-							events.fireToPageNone('qun_manage_data_sub.html', 'changeName', {
+							events.fireToPageNone('qun_manage_1.html', 'changeName', {
 								vtp: 'tec', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+								gid:gid,//群id
 								stuid: stuid, //资料ID,更新学生老师必填,关系留0
 								stuname: tea_name.value, //资料名称
 							});
