--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -26,10 +26,10 @@
 		<div id="popover" class="mui-popover">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
-					<a id="zan" href="#">点赞</a>
+					<a id="zan" class="mui-icon iconfont icon-quxiaozan" href="#"> 点赞</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a id="check" href="#">查看</a>
+					<a id="check" class="mui-icon iconfont icon-liulan"  href="#">  查看</a>
 				</li>
 			</ul>
 		</div>
